--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: Mar Co Clay - Github Connected
 Theme URI: http://www.wpbeaverbuilder.com
 Version: 1.0
 Description: An example child theme that can be used as a starting point for custom development.
-Author: The Beaver Builder Team
+Author: Vanessa Rusu
 Author URI: http://www.fastlinemedia.com
 template: bb-theme
 */
