--- a/src/scss/components/_product-sliders.scss
+++ b/src/scss/components/_product-sliders.scss
@@ -37,6 +37,7 @@
         img {
             min-height: 612px;
             object-fit: cover;
+            border-right: 8px solid white;
         }
     }
 
@@ -47,6 +48,7 @@
         align-content: center;
         display: flex;
         flex-wrap: wrap;
+        min-height: 900px;
 
 
 
@@ -119,11 +121,11 @@
   .slider-nav-container {
 
     .thumb-container {
-        background: #E2DFDF;
+        // background: #E2DFDF;
         margin: 0 auto;
-        width: 80%;
-        border-right: 4px solid white;
-            border-left: 4px solid white;
+        // width: 80%;
+        // border-right: 4px solid white;
+            // border-left: 4px solid white;
 
         .slick-track {
 
@@ -138,6 +140,19 @@
     .batters-box-slider-nav,
     .track-materials-slider-nav,
     .conditioners-slider-nav  {
+        .thumb-image-container {
+            position: relative;
+            span {
+                position: absolute;
+                top: 0;
+                z-index: 100;
+                display: block;
+                width: 100%;
+                background: var(--brand-offwhite);
+                font-size: 16px;
+                padding: 0.8rem;
+            }
+        }
 
         .slick-track {
             justify-content: center;
@@ -146,12 +161,18 @@
         .slick-slide {
             transition: all 0.2s ease-in-out;
             cursor: pointer;
-            border-right: 4px solid white;
-            border-left: 4px solid white;
+            border-right: 8px solid white;
+            // border-left: 4px solid white;
 
-            &:not(.slick-current) img {
-                opacity: 0.5;
+            &:not(.slick-current) {
+                // border-right: none;
+                // border-right: 8px solid transparent;
+                img {
+                    opacity: 0.5;
+                }
             }
+
+            
         }
     }
   }
@@ -167,77 +188,129 @@
     left: 0;
     right: 0;
     width: 38%;
+    // width: 45%;
     // width: 30%;
-    background: #E2DFDF;
+    // background: #E2DFDF;
+}
+
+// .slick-prev {
+//     position: absolute;
+//     bottom: 0;
+//     left: 0;
+
+//     @media (max-width: 1500px) {
+//         left: 0;
+//         padding: 0;
+//     }
+// }
+
+// .slick-next {
+//     position: absolute;
+//     bottom: 0;
+//     left: clamp(200px, 35%, 545px);
+
+//     @media (max-width: 1500px) {
+//         left: 34%;
+//         padding: 0;
+//     }
+
+//     z-index: 100;
+//     display: none;
+// }
+
+// .slick-next,
+// .slick-prev {
+//     background: transparent;
+//     border: none;
+//     height: 180px;
+//     z-index: 100;
+//     padding: 0;
+
+//     @media (max-width: 1200px) {
+//         height: auto;
+//         transform: translateY(-140%);
+//     }
+
+//     &:focus,
+//     &:hover {
+//         background: transparent;
+//         border: none;
+//         outline: none;
+//         position: absolute;
+//         bottom: 0;
+//         top: unset;
+//     }
+
+//     i {
+//         color: black;
+//         font-size: 40px;
+//         padding: 30px;
+//         height: 100%;
+//         display: flex;
+//         align-items: center;
+//         text-align: center;
+//         justify-content: center;
+
+//         @media (max-width: 1500px) {
+//             padding: 12px;
+//         }
+
+//     }    
+// }
+
+.slick-prev, .slick-next,
+.slick-prev:focus, .slick-next:focus {
+    background: transparent;
+    position: absolute;
+    top: 0;
+    z-index: 100;
+    height: 100%;
+    width: 54px;
+    border: none;
+
+    &:hover, &:focus {
+        background: transparent;
+        border: none;
+
+        i {
+            color: var(--brand-black);
+        }
+        &:after {
+            color: var(--brand-black);
+        }
+    }
+
+    i {
+        color: var(--brand-red);
+        font-size: 40px;
+    }
+
+    &:after {
+        color: var(--brand-red);
+        position: absolute;
+        display: block;
+        margin-top: 12px;
+    }
 }
 
 .slick-prev {
-    position: absolute;
-    bottom: 0;
-    left: 0;
+    left: -140px;
 
-    @media (max-width: 1500px) {
-        left: 0;
-        padding: 0;
+    &:after {
+        content: 'Previous';
     }
 }
 
 .slick-next {
-    position: absolute;
-    bottom: 0;
-    left: clamp(200px, 35%, 545px);
+    right: -140px;
 
-    @media (max-width: 1500px) {
-        left: 34%;
-        padding: 0;
+    &:after {
+        content: 'Next';
+        left: 0;
     }
-
-    z-index: 100;
-    display: none;
 }
 
-.slick-next,
-.slick-prev {
-    background: transparent;
-    border: none;
-    height: 180px;
-    z-index: 100;
-    padding: 0;
-
-    @media (max-width: 1200px) {
-        height: auto;
-        transform: translateY(-140%);
-    }
-
-    &:focus,
-    &:hover {
-        background: transparent;
-        border: none;
-        outline: none;
-        position: absolute;
-        bottom: 0;
-        top: unset;
-    }
-
-    i {
-        color: black;
-        font-size: 40px;
-        padding: 30px;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        text-align: center;
-        justify-content: center;
-
-        @media (max-width: 1500px) {
-            padding: 12px;
-        }
-
-    }    
-}
-
-
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1400px) {
     .custom-product-slick-slider {
         margin-left: 0;
         margin-top: 20px;
@@ -279,15 +352,23 @@
             width: 50px;
             transform: translateY(0);
             height: 100%;
+            &:after {
+                display: none;
+            }
 
             i {
-                font-size: 26px;
+                font-size: 36px;
             }
         }
 
         .slick-next {
             right: 0;
             left: unset;
+        }
+
+        .slick-prev {
+            left: 0;
+            right: unset;
         }
     }
 
@@ -342,4 +423,19 @@
             right: -20px;
         }
     } 
+}
+
+#infield-mixes,
+#batters-box,
+#warning-track-materials,
+#conditioners {
+    .fl-row-fixed-width {
+        @media(max-width: 2000px) {
+            max-width: 1300px;
+        }
+    
+        @media(max-width: 1700px) {
+            max-width: 1000px;
+        }
+    }
 }
