--- a/src/scss/components/_product-sliders.scss
+++ b/src/scss/components/_product-sliders.scss
@@ -48,7 +48,7 @@
         align-content: center;
         display: flex;
         flex-wrap: wrap;
-        min-height: 900px;
+        // min-height: 900px;
 
 
 
