product slider grid gap

--- a/src/scss/components/_product-sliders.scss
+++ b/src/scss/components/_product-sliders.scss
@@ -91,6 +91,7 @@
       .wrapper {
         display: grid;
         grid-template-columns: 1fr 4fr;
+        grid-column-gap: 2rem;
 
         p {
             margin-bottom: 10px;
