--- a/src/scss/components/_shop.scss
+++ b/src/scss/components/_shop.scss
@@ -442,7 +442,7 @@
             border: 1px solid var(--brand-black);
             border-radius: 0;
             min-height: 40px;
-            text-transform: uppercase;
+            // text-transform: uppercase;
         }
 
         span.select2-selection {
@@ -450,7 +450,7 @@
             border: 1px solid var(--brand-black);
             border-radius: 0;
             min-height: 40px;
-            text-transform: uppercase;
+            // text-transform: uppercase;
 
             span {
                 font-size: 14px;
